--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 </div>
 
  <h1>
+   <font color="white">
    HELP MAKE ME RICHER THAN DONALD TRUMP AND TOGETHER WE CAN PISS HIM OFF
- 
+ </font>
  </h1>
 
 <body>
@@ -34,6 +35,8 @@
 
 <br>
 
+ <font color="white">
+   
 As of Friday 1st of December 2017, 11:36pm EDT there are 7,585,001,335 people in the world (and rising).That means that if every person in the world gave me 1 dollar as of this very moment, I would be more than twice as rich as The President of the United States of America, Donald J Trump, who according to the 2017 Forbes Rich List has a Net Worth of 3.5 billion USD. I invite you to donate as little or as much money as you want, in order to make me richer than Mr Trump himself and prove to him he isn't as great or as successful as he believes.
 
 Help me achieve something no one has dared ask for before and make me a billionaire.
@@ -58,6 +61,7 @@ Help me overtake him on the rich list.
 Some ordinary girl overtaking the man who was the first billionaire in the world, fueled by people who dislike him.
 
 (Disclaimer: None of the views on this page reflect my own personal opinion of Trump)
+ </font>
 
 </div>
   <audio src="billions.mp3" autoplay>
