--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
  <h1>
    <font color="white">
+     size="40"
    HELP MAKE ME RICHER THAN DONALD TRUMP AND TOGETHER WE CAN PISS HIM OFF
  </font>
  </h1>
@@ -36,6 +37,7 @@
 <br>
 
  <font color="white">
+   size="18"
    
 As of Friday 1st of December 2017, 11:36pm EDT there are 7,585,001,335 people in the world (and rising).That means that if every person in the world gave me 1 dollar as of this very moment, I would be more than twice as rich as The President of the United States of America, Donald J Trump, who according to the 2017 Forbes Rich List has a Net Worth of 3.5 billion USD. I invite you to donate as little or as much money as you want, in order to make me richer than Mr Trump himself and prove to him he isn't as great or as successful as he believes.
 
