--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@ Some ordinary girl overtaking the man who was the first billionaire in the world
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="DFU8ZCYAD8Z3C">
-<input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
+<input type="image" src="donate now.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!">
 </form>
 
 
