--- a/index.html
+++ b/index.html
@@ -57,27 +57,42 @@
 As of Friday 1st of December 2017, 11:36pm EDT there are 7,585,001,335 people in the world (and rising).That means that if every person in the world gave me 1 dollar as of this very moment, I would be more than twice as rich as The President of the United States of America, Donald J Trump, who according to the 2017 Forbes Rich List has a Net Worth of 3.5 billion USD. I invite you to donate as little or as much money as you want, in order to make me richer than Mr Trump himself and prove to him he isn't as great or as successful as he believes.
 
 Help me achieve something no one has dared ask for before and make me a billionaire.
+   
 
 Together we can do something that will actually piss Donald Trump off, by changing one of the things that are actually important to him, his standing on the rich list. It’s no secret that money and power is of great importance to the 45th President of The United States of America.
 
- "Part of the beauty of me is that I am very rich.” Donald Trump, Good Morning America 2012
+
+   "Part of the beauty of me is that I am very rich.” Donald Trump, Good Morning America 2012
+   
 
 "Have to be wealthy in order to be great”  Donald Trump, during a speech in North Dakota on 26 May 2016.
+   
 
 In December, he defended his hiring practices by saying in an Iowa ‘thank you’ speech, “I want people that made a fortune.”
+   
 
-And recently by appointing fellow billionaire Wilbur Ross to serve as Commerce Secretary. As according to Trump “At the end of the day, it came down to money”. Going on to say “These are people that are great brilliant business minds. That’s what we need. That’s what we have to have so the world doesn’t take advantage of us.”  (https://www.mediaite.com/online/donald-trump-says-only-the-rich-should-manage-economy-i-just-dont-want-a-poor-person/)
+And recently by appointing fellow billionaire Wilbur Ross to serve as Commerce Secretary. As according to Trump “At the end of the day, it came down to money”. Going on to say “These are people that are great brilliant business minds. That’s what we need. That’s what we have to have so the world doesn’t take advantage of us.” 
+   
+   
+   (https://www.mediaite.com/online/donald-trump-says-only-the-rich-should-manage-economy-i-just-dont-want-a-poor-person/)
+   
 
 However as seen during the elections, if Trump had just put his own inheritance into a Stock Market Tracker he would be a much richer man than he is today.
+   
+   
 
-fortune.com -  wrote in 2015 that Trump’s was worth an estimated 4 Billion USD, However if Trump had invested in an index fund in 1988, his net worth would be as much as $13 billion.  (http://fortune.com/2015/08/20/donald-trump-index-funds/)
+fortune.com -  wrote in 2015 that Trump’s was worth an estimated 4 Billion USD, However if Trump had invested in an index fund in 1988, his net worth would be as much as $13 billion.
+   
+   (http://fortune.com/2015/08/20/donald-trump-index-funds/)
 
 What better way to annoy him than to actually ruin something which is important to him.
 Help me overtake him on the rich list.
 
-Some ordinary girl overtaking the man who was the first billionaire in the world, fueled by people who dislike him.
+Some ordinary person overtaking the man who was the first billionaire in the world, fueled by people who dislike him.
 
 (Disclaimer: None of the views on this page reflect my own personal opinion of Trump)
+   
+   
  </font>
 
 </div>
