--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
  <font color="white">
    
    
-As of Friday 1st of December 2017, 11:36pm EDT there are <a href:”http://www.worldometers.info/world-population/”:> 7,585,001,335 people in the world (and rising).  </a>
+As of Friday 1st of December 2017,there are
+   
+   <a href:”http://www.worldometers.info/world-population/” target="_blank"> 7,585,001,335 people in the world (and rising). </a>  
+   
    That means that if every person in the world gave me 1 dollar as of this very moment,
    I would be more than twice as rich as The President of the United States of America, Donald J Trump,
    who according to the 2017 Forbes Rich List has a Net Worth of 3.5 billion USD. 
