--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
  <font color="white">
    
    
-As of Friday 1st of December 2017,there are
+As of Friday 1st of December 2017, 11:36pm EDT there are
    
    <a href:”http://www.worldometers.info/world-population/” target="_blank"> 7,585,001,335 people in the world (and rising). </a>  
    
